# philosophers

./: Philosophers.emmx  pass_arguments_to_threads.c  philo_debug.emmx
my_work/: Makefile  check_arguments.c  eat_sleep.c  execute_threads.c  init.c  main.c  philo  philosophers.h  routine.c  routine_utils.c  routines.c  utils.c
my_work/my_work2/: Makefile  execute_threads.c  init.c  main.c  philosophers.h  routine_utils.c  routines.c  utils.c
practice/: create_multiple_threads.c  create_thread_in_a_loop.c  detach_threads.c  mutex_in_C.c  naive_try.c  pass_arguments_to_threads.c  return_value_from_thread.c  try_memset.c  try_pthread.c
ref/: Makefile
ref/philo_ok/: CMakeLists.txt  README.md
ref/philo_ok/philo_one/: Makefile  eat_sleep_repeat.c  errors.c  ft_atoi.c  ft_isdigit.c  ft_itoa.c  ft_putstr_fd.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  get_forks.c  get_time.c  init.c  message.c  parse.c  philo_one  philo_one.c  philo_one.h
ref/philo_ok/philo_three/: Makefile  eat_sleep_repeat.c  errors.c  ft_atoi.c  ft_isdigit.c  ft_itoa.c  ft_putstr_fd.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  get_time.c  init.c  message.c  parse.c  philo_three.c  philo_three.h
ref/philo_ok/philo_two/: Makefile  eat_sleep_repeat.c  errors.c  ft_atoi.c  ft_isdigit.c  ft_itoa.c  ft_putstr_fd.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  get_time.c  init.c  message.c  parse.c  philo_two.c  philo_two.h
ref/philo_one/: fcn_forks.c  ft_strlen.c  main.c  message.c  philo_one  philosophers.h  simulation_tools.c  watch_for_death.c
ref/philo_recent/: Makefile  (+1 more)
reference/: Makefile  philo_one
(+49 files in other folders)
